# apogeebacktest

./: .gitignore  CaseStudy-v1-ExploreData.ipynb  CaseStudy-v2-UsePackage.ipynb  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/apogeebacktest/: __init__.py  main.py
src/apogeebacktest/data/: __init__.py  connector.py  market.py  pd_connector.py
src/apogeebacktest/data/tests/: test_market.py
src/apogeebacktest/indicators/: __init__.py  book_to_price.py  indicator.py
src/apogeebacktest/indicators/tests/: test indicator.py  test_book_to_price.py
src/apogeebacktest/instruments/: __init__.py  instrument.py  portfolio.py  stock.py
src/apogeebacktest/instruments/tests/: test_instrument.py  test_portfolio.py  test_stock.py
src/apogeebacktest/resources/: dataset.xlsx
src/apogeebacktest/risks/: __init__.py  cvar.py  risk.py  var.py
src/apogeebacktest/risks/tests/: test_cvar.py  test_risk.py  test_var.py
src/apogeebacktest/signals/: __init__.py  best_bp.py  signal.py  worst_bp.py
src/apogeebacktest/signals/tests/: test_best_bp.py  test_signal.py  test_worst_bp.py
src/apogeebacktest/strategies/: __init__.py  bp_strategy.py  market_strategy.py  strategy.py
src/apogeebacktest/strategies/tests/: test_bp_strategy.py  test_market_strategy.py  test_strategy.py
src/apogeebacktest/tests/: test_helper.py  test_main.py
src/apogeebacktest/utils/: __init__.py  plots.py  returns.py
src/apogeebacktest/utils/tests/: test_plots.py  test_returns.py
